# SystemPromptVault

./: .gitignore  AGENTS.md  LICENSE  README.md  README_ZH.md  TROUBLESHOOTING.md  package-lock.json  package-lock.json.backup  package.json  tailwind.config.js  vite.config.js
.github/workflows/: build.yml  ci.yml
docs/: FILE_CHANGE_DETECTION.md  SNAPSHOT_USER_GUIDE.md  VISUAL_ASSETS_GUIDE.md  plan.md
llmdoc/: index.md
llmdoc/agent/: agents-md-creation-guide-and-development-workflow.md  app-menu-dynamic-refresh-technical-research.md  app-menu-vs-tray-menu-refresh-comparison-technical-report.md  backend-snapshot-api-implementation-research.md  backend-tray-notification-mechanism-analysis.md  btn-export-prompts-svg-icon-design-analysis.md  btnExportPrompts-svg-icon-design-style-analysis.md  build-artifacts-and-dependencies-investigation-report.md  build-artifacts-dependencies-security-scan.md  bun-migration-record.md  client-architecture-deep-analysis.md  client-import-export-data-model-adaptation.md  (+70 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_menu.rs  file_watcher.rs  lib.rs  main.rs  tray.rs
src-tauri/src/commands/: app_state.rs  backup.rs  client.rs  config_file.rs  file_watcher.rs  mod.rs  path.rs  project.rs  prompt.rs  snapshot.rs  template.rs
src-tauri/src/models/: app_state.rs  client.rs  mod.rs  operations.rs  project.rs  prompt.rs  snapshot.rs  template.rs
src-tauri/src/storage/: client_repository.rs  json_store.rs  mod.rs  prompt_repository.rs  snapshot_repository.rs
src-tauri/src/utils/: file_ops.rs  mod.rs  path_utils.rs
(+23 files in other folders)
